[package]
name = "mtos"
version = "0.1.0"
authors = ["Matt Turner <matturner@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = {version = "^0.5", features = ["map_physical_memory"]}
volatile = "^0.2"
spin = "^0.4"
uart_16550 = "^0.1"
x86_64 = "^0.5"
pic8259_simple = "^0.1"
pc-keyboard = "^0.3"
ux = {default-features = false, version = "^0.1"}

[dependencies.lazy_static]
version = "^1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-unknown-raw.json"
