[package]
name = "mtos"
version = "0.1.0"
authors = ["Matt Turner <matturner@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = {version = "^0.8.0", features = ["map_physical_memory"]}
volatile = "^0.2.6"
spin = "^0.5.2"
x86_64 = "^0.9.6"
uart_16550 = "^0.2.4"
pic8259_simple = "^0.1.1"
pc-keyboard = "^0.5.0"
linked_list_allocator = "^0.8.0"
raw-cpuid = "^9.0.0"

[dependencies.lazy_static]
version = "^1.0"
features = ["spin_no_std"]
